csharp/CSC431/EvilParser.cs
// $ANTLR 3.3 Nov 30, 2010 12:50:56 Evil.g 2011-01-16 07:04:09

// The variable 'variable' is assigned but its value is never used.
#pragma warning disable 168, 219
// Unreachable code detected.
#pragma warning disable 162


   /* <auto-generated> package declaration here */
   



using System;
using System.Collections.Generic;
using Antlr.Runtime;
using Stack = System.Collections.Generic.Stack<object>;
using List = System.Collections.IList;
using ArrayList = System.Collections.Generic.List<object>;
using Map = System.Collections.IDictionary;
using HashMap = System.Collections.Generic.Dictionary<object, object>;

using Antlr.Runtime.Tree;
using RewriteRuleITokenStream = Antlr.Runtime.Tree.RewriteRuleTokenStream;

namespace CSC431
{
[System.CodeDom.Compiler.GeneratedCode("ANTLR", "3.3 Nov 30, 2010 12:50:56")]
[System.CLSCompliant(false)]
public partial class EvilParser : Antlr.Runtime.Parser
{
	internal static readonly string[] tokenNames = new string[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "STRUCT", "INT", "BOOL", "FUN", "VOID", "PRINT", "ENDL", "READ", "IF", "ELSE", "WHILE", "DELETE", "RETURN", "TRUE", "FALSE", "NEW", "NULL", "PROGRAM", "TYPES", "TYPE", "DECLS", "FUNCS", "DECL", "DECLLIST", "PARAMS", "RETTYPE", "BLOCK", "STMTS", "INVOKE", "ARGS", "NEG", "LBRACE", "RBRACE", "SEMI", "COMMA", "LPAREN", "RPAREN", "ASSIGN", "DOT", "AND", "OR", "EQ", "LT", "GT", "NE", "LE", "GE", "PLUS", "MINUS", "TIMES", "DIVIDE", "NOT", "ID", "INTEGER", "WS", "COMMENT"
	};
	public const int EOF=-1;
	public const int STRUCT=4;
	public const int INT=5;
	public const int BOOL=6;
	public const int FUN=7;
	public const int VOID=8;
	public const int PRINT=9;
	public const int ENDL=10;
	public const int READ=11;
	public const int IF=12;
	public const int ELSE=13;
	public const int WHILE=14;
	public const int DELETE=15;
	public const int RETURN=16;
	public const int TRUE=17;
	public const int FALSE=18;
	public const int NEW=19;
	public const int NULL=20;
	public const int PROGRAM=21;
	public const int TYPES=22;
	public const int TYPE=23;
	public const int DECLS=24;
	public const int FUNCS=25;
	public const int DECL=26;
	public const int DECLLIST=27;
	public const int PARAMS=28;
	public const int RETTYPE=29;
	public const int BLOCK=30;
	public const int STMTS=31;
	public const int INVOKE=32;
	public const int ARGS=33;
	public const int NEG=34;
	public const int LBRACE=35;
	public const int RBRACE=36;
	public const int SEMI=37;
	public const int COMMA=38;
	public const int LPAREN=39;
	public const int RPAREN=40;
	public const int ASSIGN=41;
	public const int DOT=42;
	public const int AND=43;
	public const int OR=44;
	public const int EQ=45;
	public const int LT=46;
	public const int GT=47;
	public const int NE=48;
	public const int LE=49;
	public const int GE=50;
	public const int PLUS=51;
	public const int MINUS=52;
	public const int TIMES=53;
	public const int DIVIDE=54;
	public const int NOT=55;
	public const int ID=56;
	public const int INTEGER=57;
	public const int WS=58;
	public const int COMMENT=59;

	// delegates
	// delegators

	#if ANTLR_DEBUG
		private static readonly bool[] decisionCanBacktrack =
			new bool[]
			{
				false, // invalid decision
				true, false, false, false, false, false, false, false, false, false, 
				false, false, false, false, false, false, false, false, false, false, 
				false, false, false, false, false, false, false, false, false, false, 
				false, false, false
			};
	#else
		private static readonly bool[] decisionCanBacktrack = new bool[0];
	#endif
	public EvilParser( ITokenStream input )
		: this( input, new RecognizerSharedState() )
	{
	}
	public EvilParser(ITokenStream input, RecognizerSharedState state)
		: base(input, state)
	{
		ITreeAdaptor treeAdaptor = null;
		CreateTreeAdaptor(ref treeAdaptor);
		TreeAdaptor = treeAdaptor ?? new CommonTreeAdaptor();

		OnCreated();
	}
		
	// Implement this function in your helper file to use a custom tree adaptor
	void CreateTreeAdaptor(ref ITreeAdaptor adaptor) {}

	private ITreeAdaptor adaptor;

	public ITreeAdaptor TreeAdaptor
	{
		get
		{
			return adaptor;
		}
		set
		{
			this.adaptor = value;
		}
	}

	public override string[] TokenNames { get { return EvilParser.tokenNames; } }
	public override string GrammarFileName { get { return "Evil.g"; } }



 	protected virtual void OnCreated() {}
	protected virtual void EnterRule(string ruleName, int ruleIndex) {}
	protected virtual void LeaveRule(string ruleName, int ruleIndex) {}

    public class program_return : ParserRuleReturnScope<IToken>, IAstRuleReturnScope<object>
    {
    	private object _tree;
    	public object Tree { get { return _tree; } set { _tree = value; } }
    }

    protected virtual void Enter_program() {}
    protected virtual void Leave_program() {}

    // $ANTLR start "program"
    // Evil.g:108:1: program : t= types d= declarations f= functions EOF -> ^( PROGRAM $t $d $f) ;
    [GrammarRule("program")]
    private EvilParser.program_return program()
    {

        EvilParser.program_return retval = new EvilParser.program_return();
        retval.Start = (IToken)input.LT(1);

        object root_0 = null;

        IToken EOF1=null;
        EvilParser.types_return t = default(EvilParser.types_return);
        EvilParser.declarations_return d = default(EvilParser.declarations_return);
        EvilParser.functions_return f = default(EvilParser.functions_return);

        object EOF1_tree=null;
        RewriteRuleITokenStream stream_EOF=new RewriteRuleITokenStream(adaptor,"token EOF");
        RewriteRuleSubtreeStream stream_functions=new RewriteRuleSubtreeStream(adaptor,"rule functions");
        RewriteRuleSubtreeStream stream_types=new RewriteRuleSubtreeStream(adaptor,"rule types");
        RewriteRuleSubtreeStream stream_declarations=new RewriteRuleSubtreeStream(adaptor,"rule declarations");
    	try { DebugEnterRule(GrammarFileName, "program");
    	DebugLocation(108, 3);
    	try
    	{
    		// Evil.g:109:4: (t= types d= declarations f= functions EOF -> ^( PROGRAM $t $d $f) )
    		DebugEnterAlt(1);
    		// Evil.g:109:7: t= types d= declarations f= functions EOF
    		{
    		DebugLocation(109, 8);
    		PushFollow(Follow._types_in_program1066);
    		t=types();
    		PopFollow();
    		if (state.failed) return retval;
    		if ( (state.backtracking==0) ) stream_types.Add(t.Tree);
    		DebugLocation(109, 16);
    		PushFollow(Follow._declarations_in_program1070);
    		d=declarations();
    		PopFollow();
    		if (state.failed) return retval;
    		if ( (state.backtracking==0) ) stream_declarations.Add(d.Tree);
    		DebugLocation(109, 31);
    		PushFollow(Follow._functions_in_program1074);
    		f=functions();
    		PopFollow();
    		if (state.failed) return retval;
    		if ( (state.backtracking==0) ) stream_functions.Add(f.Tree);
    		DebugLocation(109, 42);
    		EOF1=(IToken)Match(input,EOF,Follow._EOF_in_program1076); if (state.failed) return retval; 
    		if ( (state.backtracking==0) ) stream_EOF.Add(EOF1);



    		{
    		// AST REWRITE
    		// elements: f, d, t
    		// token labels: 
    		// rule labels: f, retval, d, t
    		// token list labels: 
    		// rule list labels: 
    		// wildcard labels: 
    		if ( (state.backtracking==0) ) {
    		retval.Tree = root_0;
    		RewriteRuleSubtreeStream stream_f=new RewriteRuleSubtreeStream(adaptor,"rule f",f!=null?f.Tree:null);
    		RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.Tree:null);
    		RewriteRuleSubtreeStream stream_d=new RewriteRuleSubtreeStream(adaptor,"rule d",d!=null?d.Tree:null);
    		RewriteRuleSubtreeStream stream_t=new RewriteRuleSubtreeStream(adaptor,"rule t",t!=null?t.Tree:null);

    		root_0 = (object)adaptor.Nil();
    		// 110:7: -> ^( PROGRAM $t $d $f)
    		{
    			DebugLocation(110, 10);
    			// Evil.g:110:10: ^( PROGRAM $t $d $f)
    			{
    			object root_1 = (object)adaptor.Nil();
    			DebugLocation(110, 12);
    			root_1 = (object)adaptor.BecomeRoot((object)adaptor.Create(PROGRAM, "PROGRAM"), root_1);

    			DebugLocation(110, 20);
    			adaptor.AddChild(root_1, stream_t.NextTree());
    			DebugLocation(110, 23);
    			adaptor.AddChild(root_1, stream_d.NextTree());
    			DebugLocation(110, 26);
    			adaptor.AddChild(root_1, stream_f.NextTree());

    			adaptor.AddChild(root_0, root_1);
    			}

    		}

    		retval.Tree = root_0;
    		}
    		}

    		}

    		retval.Stop = (IToken)input.LT(-1);

    		if ( (state.backtracking==0) ) {

    		retval.Tree = (object)adaptor.RulePostProcessing(root_0);
    		adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);
    		}
    	}
    	catch (RecognitionException re)
    	{
    		ReportError(re);
    		Recover(input,re);
    	retval.Tree = (object)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

    	}
    	finally
    	{
        }
     	DebugLocation(111, 3);
    	} finally { DebugExitRule(GrammarFileName, "program"); }
    	return retval;

    }
    // $ANTLR end "program"

    public class types_return : ParserRuleReturnScope<IToken>, IAstRuleReturnScope<object>
    {
    	private object _tree;
    	public object Tree { get { return _tree; } set { _tree = value; } }
    }

    protected virtual void Enter_types() {}
    protected virtual void Leave_types() {}

    // $ANTLR start "types"
    // Evil.g:112:1: types : ( ( STRUCT ID LBRACE )=> types_sub -> ^( TYPES types_sub ) | -> TYPES );
    [GrammarRule("types")]
    private EvilParser.types_return types()
    {

        EvilParser.types_return retval = new EvilParser.types_return();
        retval.Start = (IToken)input.LT(1);

        object root_0 = null;

        EvilParser.types_sub_return types_sub2 = default(EvilParser.types_sub_return);

        RewriteRuleSubtreeStream stream_types_sub=new RewriteRuleSubtreeStream(adaptor,"rule types_sub");
    	try { DebugEnterRule(GrammarFileName, "types");
    	DebugLocation(112, 3);
    	try
    	{
    		// Evil.g:113:4: ( ( STRUCT ID LBRACE )=> types_sub -> ^( TYPES types_sub ) | -> TYPES )
    		int alt1=2;
    		try { DebugEnterDecision(1, decisionCanBacktrack[1]);
    		switch (input.LA(1))
    		{
    		case STRUCT:
    			{
    			int LA1_1 = input.LA(2);

    			if ((EvaluatePredicate(synpred1_Evil_fragment)))
    			{
    				alt1=1;
    			}
    			else if ((true))
    			{
    				alt1=2;
    			}
    			else
    			{
    				if (state.backtracking>0) {state.failed=true; return retval;}
    				NoViableAltException nvae = new NoViableAltException("", 1, 1, input);

    				DebugRecognitionException(nvae);
    				throw nvae;
    			}
    			}
    			break;
    		case INT:
    			{
    			int LA1_2 = input.LA(2);

    			if ((EvaluatePredicate(synpred1_Evil_fragment)))
    			{
    				alt1=1;
    			}
    			else if ((true))
    			{
    				alt1=2;
    			}
    			else
    			{
    				if (state.backtracking>0) {state.failed=true; return retval;}
    				NoViableAltException nvae = new NoViableAltException("", 1, 2, input);

    				DebugRecognitionException(nvae);
    				throw nvae;
    			}
    			}
    			break;
    		case BOOL:
    			{
    			int LA1_3 = input.LA(2);

    			if ((EvaluatePredicate(synpred1_Evil_fragment)))
    			{
    				alt1=1;
    			}
    			else if ((true))
    			{
    				alt1=2;
    			}
    			else
    			{
    				if (state.backtracking>0) {state.failed=true; return retval;}
    				NoViableAltException nvae = new NoViableAltException("", 1, 3, input);

    				DebugRecognitionException(nvae);
    				throw nvae;
    			}
    			}
    			break;
    		case FUN:
    			{
    			int LA1_4 = input.LA(2);

    			if ((EvaluatePredicate(synpred1_Evil_fragment)))
    			{
    				alt1=1;
    			}
    			else if ((true))
    			{
    				alt1=2;
    			}
    			else
    			{
    				if (state.backtracking>0) {state.failed=true; return retval;}
    				NoViableAltException nvae = new NoViableAltException("", 1, 4, input);

    				DebugRecognitionException(nvae);
    				throw nvae;
    			}
    			}
    			break;
    		case EOF:
    			{
    			int LA1_5 = input.LA(2);

    			if ((EvaluatePredicate(synpred1_Evil_fragment)))
    			{
    				alt1=1;
    			}
    			else if ((true))
    			{
    				alt1=2;
    			}
    			else
    			{
    				if (state.backtracking>0) {state.failed=true; return retval;}
    				NoViableAltException nvae = new NoViableAltException("", 1, 5, input);

    				DebugRecognitionException(nvae);
    				throw nvae;
    			}
    			}
    			break;
    		default:
    			{
    				if (state.backtracking>0) {state.failed=true; return retval;}
    				NoViableAltException nvae = new NoViableAltException("", 1, 0, input);

    				DebugRecognitionException(nvae);
    				throw nvae;
    			}
    		}

    		} finally { DebugExitDecision(1); }
    		switch (alt1)
    		{
    		case 1:
    			DebugEnterAlt(1);
    			// Evil.g:113:7: ( STRUCT ID LBRACE )=> types_sub
    			{
    			DebugLocation(113, 29);
    			PushFollow(Follow._types_sub_in_types1122);
    			types_sub2=types_sub();
    			PopFollow();
    			if (state.failed) return retval;
    			if ( (state.backtracking==0) ) stream_types_sub.Add(types_sub2.Tree);


    			{
    			// AST REWRITE
    			// elements: types_sub
    			// token labels: 
    			// rule labels: retval
    			// token list labels: 
    			// rule list labels: 
    			// wildcard labels: 
    			if ( (state.backtracking==0) ) {
    			retval.Tree = root_0;
    			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.Tree:null);

    			root_0 = (object)adaptor.Nil();
    			// 113:39: -> ^( TYPES types_sub )
    			{
    				DebugLocation(113, 42);
    				// Evil.g:113:42: ^( TYPES types_sub )
    				{
    				object root_1 = (object)adaptor.Nil();
    				DebugLocation(113, 44);
    				root_1 = (object)adaptor.BecomeRoot((object)adaptor.Create(TYPES, "TYPES"), root_1);

    				DebugLocation(113, 50);
    				adaptor.AddChild(root_1, stream_types_sub.NextTree());

    				adaptor.AddChild(root_0, root_1);
    				}

    			}

    			retval.Tree = root_0;
    			}
    			}

    			}
    			break;
    		case 2:
    			DebugEnterAlt(2);
    			// Evil.g:114:7: 
    			{

    			{
    			// AST REWRITE
    			// elements: 
    			// token labels: 
    			// rule labels: retval
    			// token list labels: 
    			// rule list labels: 
    			// wildcard labels: 
    			if ( (state.backtracking==0) ) {
    			retval.Tree = root_0;
    			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.Tree:null);

    			root_0 = (object)adaptor.Nil();
    			// 114:7: -> TYPES
    			{
    				DebugLocation(114, 10);
    				adaptor.AddChild(root_0, (object)adaptor.Create(TYPES, "TYPES"));

    			}

    			retval.Tree = root_0;
    			}
    			}

    			}
    			break;

    		}
    		retval.Stop = (IToken)input.LT(-1);

    		if ( (state.backtracking==0) ) {

    		retval.Tree = (object)adaptor.RulePostProcessing(root_0);
    		adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);
    		}
    	}
    	catch (RecognitionException re)
    	{
    		ReportError(re);
    		Recover(input,re);
    	retval.Tree = (object)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

    	}
    	finally
    	{
        }
     	DebugLocation(115, 3);
    	} finally { DebugExitRule(GrammarFileName, "types"); }
    	return retval;

    }
    // $ANTLR end "types"

    public class types_sub_return : ParserRuleReturnScope<IToken>, IAstRuleReturnScope<object>
    {
    	private object _tree;
    	public object Tree { get { return _tree; } set { _tree = value; } }
    }

    protected virtual void Enter_types_sub() {}
    protected virtual void Leave_types_sub() {}

    // $ANTLR start "types_sub"
    // Evil.g:116:1: types_sub : ( ( STRUCT ID LBRACE )=> type_declaration types_sub | );
    [GrammarRule("types_sub")]
    private EvilParser.types_sub_return types_sub()
    {

        EvilParser.types_sub_return retval = new EvilParser.types_sub_return();
        retval.Start = (IToken)input.LT(1);

        object root_0 = null;

        EvilParser.type_declaration_return type_declaration3 = default(EvilParser.type_declaration_return);
        EvilParser.types_sub_return types_sub4 = default(EvilParser.types_sub_return);


    	try { DebugEnterRule(GrammarFileName, "types_sub");
    	DebugLocation(116, 3);
    	try
    	{
    		// Evil.g:117:4: ( ( STRUCT ID LBRACE )=> type_declaration types_sub | )
    		int alt2=2;
    		try { DebugEnterDecision(2, decisionCanBacktrack[2]);
    		int LA2_0 = input.LA(1);

    		if ((LA2_0==STRUCT))
    		{
    			int LA2_1 = input.LA(2);

    			if ((LA2_1==ID))
    			{
    				int LA2_3 = input.LA(3);

    				if ((LA2_3==LBRACE) && (EvaluatePredicate(synpred2_Evil_fragment)))
    				{
    					alt2=1;
    				}
    				else if ((LA2_3==ID))
    				{
    					alt2=2;
    				}
    				else
    				{
    					if (state.backtracking>0) {state.failed=true; return retval;}
    					NoViableAltException nvae = new NoViableAltException("", 2, 3, input);

    					DebugRecognitionException(nvae);
    					throw nvae;
    				}
    			}
    			else
    			{
    				if (state.backtracking>0) {state.failed=true; return retval;}
    				NoViableAltException nvae = new NoViableAltException("", 2, 1, input);

    				DebugRecognitionException(nvae);
    				throw nvae;
    			}
    		}
    		else if ((LA2_0==EOF||(LA2_0>=INT && LA2_0<=FUN)))
    		{
    			alt2=2;
    		}
    		else
    		{
    			if (state.backtracking>0) {state.failed=true; return retval;}
    			NoViableAltException nvae = new NoViableAltException("", 2, 0, input);

    			DebugRecognitionException(nvae);
    			throw nvae;
    		}
    		} finally { DebugExitDecision(2); }
    		switch (alt2)
    		{
    		case 1:
    			DebugEnterAlt(1);
    			// Evil.g:117:7: ( STRUCT ID LBRACE )=> type_declaration types_sub
    			{
    			root_0 = (object)adaptor.Nil();

    			DebugLocation(117, 29);
    			PushFollow(Follow._type_declaration_in_types_sub1165);
    			type_declaration3=type_declaration();
    			PopFollow();
    			if (state.failed) return retval;
    			if ( (state.backtracking==0) ) adaptor.AddChild(root_0, type_declaration3.Tree);
    			DebugLocation(117, 46);
    			PushFollow(Follow._types_sub_in_types_sub1167);
    			types_sub4=types_sub();
    			PopFollow();
    			if (state.failed) return retval;
    			if ( (state.backtracking==0) ) adaptor.AddChild(root_0, types_sub4.Tree);

    			}
    			break;
    		case 2:
    			DebugEnterAlt(2);
    			// Evil.g:119:4: 
    			{
    			root_0 = (object)adaptor.Nil();

    			}
    			break;

    		}
    		retval.Stop = (IToken)input.LT(-1);

    		if ( (state.backtracking==0) ) {

    		retval.Tree = (object)adaptor.RulePostProcessing(root_0);
    		adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);
    		}
    	}
    	catch (RecognitionException re)
    	{
    		ReportError(re);
    		Recover(input,re);
    	retval.Tree = (object)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

    	}
    	finally
    	{
        }
     	DebugLocation(119, 3);
    	} finally { DebugExitRule(GrammarFileName, "types_sub"); }
    	return retval;

    }
    // $ANTLR end "types_sub"

    public class type_declaration_return : ParserRuleReturnScope<IToken>, IAstRuleReturnScope<object>
    {
    	private object _tree;
    	public object Tree { get { return _tree; } set { _tree = value; } }
    }

    protected virtual void Enter_type_declaration() {}
    protected virtual void Leave_type_declaration() {}

    // $ANTLR start "type_declaration"
    // Evil.g:120:1: type_declaration : STRUCT ID LBRACE nested_decl RBRACE SEMI ;
    [GrammarRule("type_declaration")]
    private EvilParser.type_declaration_return type_declaration()
    {

        EvilParser.type_declaration_return retval = new EvilParser.type_declaration_return();
        retval.Start = (IToken)input.LT(1);

        object root_0 = null;

        IToken STRUCT5=null;
        IToken ID6=null;
        IToken LBRACE7=null;
        IToken RBRACE9=null;
        IToken SEMI10=null;
        EvilParser.nested_decl_return nested_decl8 = default(EvilParser.nested_decl_return);

        object STRUCT5_tree=null;
        object ID6_tree=null;
        object LBRACE7_tree=null;
        object RBRACE9_tree=null;
        object SEMI10_tree=null;

    	try { DebugEnterRule(GrammarFileName, "type_declaration");
    	DebugLocation(120, 3);
    	try
    	{
    		// Evil.g:121:4: ( STRUCT ID LBRACE nested_decl RBRACE SEMI )
    		DebugEnterAlt(1);
    		// Evil.g:121:7: STRUCT ID LBRACE nested_decl RBRACE SEMI
    		{
    		root_0 = (object)adaptor.Nil();

    		DebugLocation(121, 13);
    		STRUCT5=(IToken)Match(input,STRUCT,Follow._STRUCT_in_type_declaration1187); if (state.failed) return retval;
    		if ( (state.backtracking==0) ) {
    		STRUCT5_tree = (object)adaptor.Create(STRUCT5);
    		root_0 = (object)adaptor.BecomeRoot(STRUCT5_tree, root_0);
    		}
    		DebugLocation(121, 15);
    		ID6=(IToken)Match(input,ID,Follow._ID_in_type_declaration1190); if (state.failed) return retval;
    		if ( state.backtracking==0 ) {
    		ID6_tree = (object)adaptor.Create(ID6);
    		adaptor.AddChild(root_0, ID6_tree);
    		}
    		DebugLocation(121, 24);
    		LBRACE7=(IToken)Match(input,LBRACE,Follow._LBRACE_in_type_declaration1192); if (state.failed) return retval;
    		DebugLocation(121, 26);
    		PushFollow(Follow._nested_decl_in_type_declaration1195);
    		nested_decl8=nested_decl();
    		PopFollow();
    		if (state.failed) return retval;
    		if ( (state.backtracking==0) ) adaptor.AddChild(root_0, nested_decl8.Tree);
    		DebugLocation(121, 44);
    		RBRACE9=(IToken)Match(input,RBRACE,Follow._RBRACE_in_type_declaration1197); if (state.failed) return retval;
    		DebugLocation(121, 50);
    		SEMI10=(IToken)Match(input,SEMI,Follow._SEMI_in_type_declaration1200); if (state.failed) return retval;

    		}

    		retval.Stop = (IToken)input.LT(-1);

    		if ( (state.backtracking==0) ) {

    		retval.Tree = (object)adaptor.RulePostProcessing(root_0);
    		adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);
    		}
    	}
    	catch (RecognitionException re)
    	{
    		ReportError(re);
    		Recover(input,re);
    	retval.Tree = (object)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

    	}
    	finally
    	{
        }
     	DebugLocation(122, 3);
    	} finally { DebugExitRule(GrammarFileName, "type_declaration"); }
    	return retval;

    }
    // $ANTLR end "type_declaration"

    public class nested_decl_return : ParserRuleReturnScope<IToken>, IAstRuleReturnScope<object>
    {
    	private object _tree;
    	public object Tree { get { return _tree; } set { _tree = value; } }
    }

    protected virtual void Enter_nested_decl() {}
    protected virtual void Leave_nested_decl() {}

    // $ANTLR start "nested_decl"
    // Evil.g:123:1: nested_decl : ( decl SEMI )+ ;
    [GrammarRule("nested_decl")]
    private EvilParser.nested_decl_return nested_decl()
    {

        EvilParser.nested_decl_return retval = new EvilParser.nested_decl_return();
        retval.Start = (IToken)input.LT(1);

        object root_0 = null;

        IToken SEMI12=null;
        EvilParser.decl_return decl11 = default(EvilParser.decl_return);

        object SEMI12_tree=null;

    	try { DebugEnterRule(GrammarFileName, "nested_decl");
    	DebugLocation(123, 3);
    	try
    	{
    		// Evil.g:124:4: ( ( decl SEMI )+ )
    		DebugEnterAlt(1);
    		// Evil.g:124:7: ( decl SEMI )+
    		{
    		root_0 = (object)adaptor.Nil();

    		DebugLocation(124, 7);
    		// Evil.g:124:7: ( decl SEMI )+
    		int cnt3=0;
    		try { DebugEnterSubRule(3);
    		while (true)
    		{
    			int alt3=2;
    			try { DebugEnterDecision(3, decisionCanBacktrack[3]);
    			int LA3_0 = input.LA(1);

    			if (((LA3_0>=STRUCT && LA3_0<=BOOL)))
    			{
    				alt3=1;
    			}


    			} finally { DebugExitDecision(3); }
    			switch (alt3)
    			{
    			case 1:
    				DebugEnterAlt(1);
    				// Evil.g:124:8: decl SEMI
    				{
    				DebugLocation(124, 8);
    				PushFollow(Follow._decl_in_nested_decl1217);
    				decl11=decl();
    				PopFollow();
    				if (state.failed) return retval;
    				if ( (state.backtracking==0) ) adaptor.AddChild(root_0, decl11.Tree);
    				DebugLocation(124, 17);
    				SEMI12=(IToken)Match(input,SEMI,Follow._SEMI_in_nested_decl1219); if (state.failed) return retval;

    				}
    				break;

    			default:
    				if (cnt3 >= 1)
    					goto loop3;

    				if (state.backtracking>0) {state.failed=true; return retval;}
    				EarlyExitException eee3 = new EarlyExitException( 3, input );
    				DebugRecognitionException(eee3);
    				throw eee3;
    			}
    			cnt3++;
    		}
    		loop3:
    			;

    		} finally { DebugExitSubRule(3); }


    		}

    		retval.Stop = (IToken)input.LT(-1);

    		if ( (state.backtracking==0) ) {

    		retval.Tree = (object)adaptor.RulePostProcessing(root_0);
    		adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);
    		}
    	}
    	catch (RecognitionException re)
    	{
    		ReportError(re);
    		Recover(input,re);
    	retval.Tree = (object)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

    	}
    	finally
    	{
        }
     	DebugLocation(125, 3);
    	} finally { DebugExitRule(GrammarFileName, "nested_decl"); }
    	return retval;

    }
    // $ANTLR end "nested_decl"

    public class decl_return : ParserRuleReturnScope<IToken>, IAstRuleReturnScope<object>
    {
    	private object _tree;
    	public object Tree { get { return _tree; } set { _tree = value; } }
    }

    protected virtual void Enter_decl() {}
    protected virtual void Leave_decl() {}

    // $ANTLR start "decl"
    // Evil.g:126:1: decl : t= type i= ID -> ^( DECL ^( TYPE $t) $i) ;
    [GrammarRule("decl")]
    private EvilParser.decl_return decl()
    {
